@@ -1,6 +1,6 @@
 Package: xcms
-Version: 1.21.14
-Date: 2010-02-18
+Version: 1.21.15
+Date: 2010-02-28
 Title: LC/MS and GC/MS Data Analysis
 Author: Colin A. Smith <csmith@scripps.edu>, 
         Ralf Tautenhahn <rtautenh@scripps.edu>,
