@@ -8,9 +8,13 @@ testMultiFactor <- function() {
              "./E261/const/WT/wt18.CDF", "./E261/const/WT/wt19.CDF",
              "./E261/const/WT/wt21.CDF", "./E261/const/WT/wt22.CDF")
   pd <- xcms:::phenoDataFromPaths(files)
+  xs <- faahko
   
-  phenoData(faahko) <- pd
-  xsg <- group(faahko)
+  ##xcms::phenoData(xs) <- pd
+  ## https://stat.ethz.ch/pipermail/r-devel/2008-April/049184.html
+  xs <- xcms::`phenoData<-`(xs, pd)
+
+  xsg <- group(xs)
 }
 
 testMultiFactorDiffreport <- function() {
@@ -23,8 +27,12 @@ testMultiFactorDiffreport <- function() {
              "./E261/const/WT/wt18.CDF", "./E261/const/WT/wt19.CDF",
              "./E261/const/WT/wt21.CDF", "./E261/const/WT/wt22.CDF")
   pd <- xcms:::phenoDataFromPaths(files)
+  xs <- faahko
   
-  phenoData(faahko) <- pd
-  xs <- fillPeaks(group(faahko))
-  dr <- diffreport(xsgf, class1="E260.KO", class2="E261.WT")
+  ##xcms::phenoData(xs) <- pd
+  ## https://stat.ethz.ch/pipermail/r-devel/2008-April/049184.html
+  xs <- xcms::`phenoData<-`(xs, pd)
+
+  xs <- fillPeaks(group(xs))
+  dr <- diffreport(xs, class1="E260.KO", class2="E261.WT")
 }
